<resources>
    <string name="app_name">Rick and Morty</string>

    <!-- LOGIN STRINGS -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_button">Continuar</string>

    <!-- HOME STRINGS -->
    <string name="home">HOME</string>
    <string name="datacharacter_name">dataCharacter_name</string>
    <string name="datacharacter_status">dataCharacter_status</string>
    <string name="datacharacter_image">dataCharacter_image</string>

    <!-- GENERALS STRINGS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="cuenta_header">Tu Cuenta</string>
    <string name="vista_header">Vista</string>
    <string name="notif_header">Notificaciones</string>


    <!-- Preferences -->
    <string name="signature_title">Tu nombre</string>
    <string name="notif_title">Notificaciones con sonido</string>
    <string name="vista_title">Dark mode</string>
    <string name="general">General</string>
    <string name="favs">Habilitar favoritos</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">1</string>
    <string name="contrasenia">Olvidaste tu contraseña?</string>
</resources>