<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/cuenta_header">

        <EditTextPreference
            app:key="signature_string"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/vista_header">

        <ListPreference
            app:defaultValue="@string/dark_mode_def_value"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="@string/dark_mode"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true"
            android:title="@string/vista_title"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notif_header">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="check_box_preference_1"
        android:title="@string/notif_title" />
    </PreferenceCategory>

<PreferenceCategory android:title="@string/general">
    <Preference
        android:title="Version"
        android:summary="1.0.0">
    </Preference>
    <Preference
    android:title="Idioma"
    android:summary="Español">
</Preference>

</PreferenceCategory>
</PreferenceScreen>